--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^17.0.1",
     "url-loader": "^4.1.1",
     "react-youtube-embed": "^1.0.3",
+    "react-image-gallery": "^1.2.7",
     "react-gist": "^1.2.2"
   },
   "browserslist": {
