--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "url-loader": "^4.1.1",
+    "react-audio-player": "^0.17.0",
     "react-youtube-embed": "^1.0.3",
     "react-image-gallery": "^1.2.7",
     "react-gist": "^1.2.2",
